Add more information link

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <tr><td>Gender:</td><td>{{listing.gender}}</td></tr>
         <tr><td>Found on:</td><td>{{listing.found_on.format('DD/MM/YYYY')}}</td></tr>
         <tr><td>Source:</td><td>{{listing.source}}</td></tr>
+        <tr><td><a href="{{listing.url}}"></a>>More information</a></td></tr>
       </tbody>
     </table>
   </p>
