--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 
 <!DOCTYPE html>
 
-<title>Cat Listing</title>
+<title>Pet Listing</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{{ url_for('static', filename='writ.css') }}"">
 
 <header>
-  <h1>Cat Listing</h1>
+  <h1>Pet Listing</h1>
 </header>
 
 <main>
