--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <header>
   <h1>Pet Listing</h1>
-  <p>{{data.__len__())}} lost pets</p>
+  <p>{{data.__len__()}} lost pets</p>
 </header>
 
 <main>
