--- a/templates/index.html
+++ b/templates/index.html
@@ -34,5 +34,6 @@
 </main>
 
 <footer>
-  <a href="https://github.com/mause/pets">Source code</a>
+  <a href="https://github.com/mause/pets">Source code</a>&nbsp;|&nbsp;
+  <a href="/index.json">Raw data</a>
 </footer>
