--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <header>
   <h1>Lost Pets</h1>
   <p>{{data.__len__()}} lost pets</p>
+  <small>Last updated {{last_updated}}</small>
 </header>
 
 <main>
