--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
 </header>
 
 <main>
+  {% for source, status in statuses.items() %}
+    {% if not status %}<code>{{source}}</code> is unavailable{% endif %}
+  {% endfor %}
+
   {% for listing in data %}
   <p>
     <img src="{{listing.image}}"/>
