Clean up email html

--- a/templates/alert_email.html
+++ b/templates/alert_email.html
@@ -1,7 +1,3 @@
 <h2>{{source}} is failing</h2>
 
-<pre><code>
-{% for line in tb %}
-{{line.rstrip()}}<br/>
-{% endfor %}
-</code></pre>
+<pre><code>{{tb}}</code></pre>
