--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="{{ url_for('static', filename='writ.css') }}"">
+<link rel="stylesheet" href="{{ url_for('static', filename='writ.css') }}">
 
 <header>
   <h1>Lost Pets</h1>
